@@ -129,7 +129,7 @@ a window manager/desktop.
 </ul>
 
 <ul>
-<li><a href="http://members.xoom.com/Lycadican">Lycadian</a> - Role-Playing
+<li><a href="http://lycadican.sourceforge.net">Lycadican</a> - Role-Playing
 Game. 
 </ul>
 
@@ -615,6 +615,30 @@ a map-editor for Exult, the open-source game engine for playing Ultima7.
 a frontend to ssh made to look like kssh. (The link is to the tarball.)
 </ul>
 
+<ul>
+<li><a href="http://bboxtm.cjb.net">Xccf</a> -
+creates italian fiscale code (in italian).
+</ul>
+
+<ul>
+<li><a href="http://gctb.sourceforge.net">GCTB (GNU Contabilidad)</a> -
+a basic account system with licence GNU GPL (in Spanish, I think).
+</ul>
+
+<ul>
+<li><a href="http://www.mcgsoft.net/html/gechoserver.tar.gz">gechoserver</a> -
+a graphic echo server.
+</ul>
+
+<ul>
+<li><a href="http://crank.sourceforge.net/">Crank</a> -
+a cryptanalysis toolkit.
+</ul>
+
+<ul>
+<li><a href="http://ogre.rocky-road.net/cdr.shtml">SimpleCDR-X</a> -
+a tool for cd burning, mastering, ripping and audio compression.
+</ul>
 
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
