@@ -164,6 +164,21 @@ Oct&nbsp;1&nbsp;2001
 
 -->
 
+<tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
+<td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+Aug&nbsp;22&nbsp;2001
+
+</b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+<B>Spanish Translation of Glade FAQ</B>
+<P>
+Ing. Marcelo Perez Medelhas posted a
+<a href="http://tigre.aragon.unam.mx/m3d/glade_spanish.htm">
+Spanish translation of the Glade Faq</a>.
+</font></td></tr>
+
 
 <tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
