@@ -1,3 +1,9 @@
+2001-08-22  Damon Chaplin  <damon@ximian.com>
+
+	* index.html: added link to Spanish translation of FAQ.
+
+	* apps.html: updated Lycadican link & added several new apps.
+
 2001-07-13  Damon Chaplin  <damon@ximian.com>
 
 	* apps.html: added 2 more apps.
